force-app/main/default/objects/RSCInstance__c/RSCInstance__c.object-meta.xml
<CustomObject>
    <description>The RSC Instance object is designed to model and manage Rubrik Service Cloud (RSC) accounts, supporting complex customer hierarchies, multiple account and URL relationships, and integrated with product provisioning. It is central to the multi-account project, enabling Rubrik to handle direct customers, MSPs, resellers, and various contract types</description>
    <label>RSC Instance</label>
    <nameField>
        <label>RSC Account Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSC Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>