force-app/main/default/objects/RSCInstance__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It represents related Account</description>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSC Instances</relationshipLabel>
    <relationshipName>RSCInstances</relationshipName>
    <type>Lookup</type>
</CustomField>