force-app/main/default/objects/RSCInstance__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <description>It represents the Contract/License Type</description>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>