force-app/main/default/objects/RSCInstance__c/fields/GCIds__c.field-meta.xml
<CustomField>
    <fullName>GCIds__c</fullName>
    <description>FY26WL-109 For Utility only - Commit IDs used to track customer usages by product</description>
    <label>Linked GCIDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>