force-app/main/default/objects/RSCInstance__c/fields/IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Legacy Account ID exists in the SFDC Account object</description>
    <label>Is Migrated ?</label>
    <type>Checkbox</type>
</CustomField>