force-app/main/default/objects/RSCInstance__c/fields/LegacyAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountId__c</fullName>
    <description>It represents the Legacy Account Id</description>
    <label>Legacy Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>