force-app/main/default/objects/RSCInstance__c/fields/RSC_URL_Search__c.field-meta.xml
<CustomField>
    <fullName>RSC_URL_Search__c</fullName>
    <description>This filed is used for global search.</description>
    <label>RSC URL (Search)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>