force-app/main/default/objects/RSCInstance__c/fields/RSCAccountName__c.field-meta.xml
<CustomField>
    <fullName>RSCAccountName__c</fullName>
    <description>It represents the customer’s account name associated with the product request.</description>
    <label>RSC Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>