force-app/main/default/objects/RSCInstance__c/fields/RSCAccountRelationship__c.field-meta.xml
<CustomField>
    <fullName>RSCAccountRelationship__c</fullName>
    <description>It represents the hierarchical role and relationship of this RSC account within the customer&apos;s overall account structure.</description>
    <label>RSC Account Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>