force-app/main/default/objects/RSCInstance__c/fields/RSCAccountType__c.field-meta.xml
<CustomField>
    <fullName>RSCAccountType__c</fullName>
    <description>It represents the environment type of the RSC account.</description>
    <label>RSC Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
                <label>Production</label>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>