force-app/main/default/objects/RSCInstance__c/fields/RSCDeployment__c.field-meta.xml
<CustomField>
    <fullName>RSCDeployment__c</fullName>
    <label>RSC Deployment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>