force-app/main/default/objects/RSCInstance__c/fields/RSCHostSite__c.field-meta.xml
<CustomField>
    <fullName>RSCHostSite__c</fullName>
    <description>FY26WL-109 To represents the host site of RSC Instance</description>
    <label>Host Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>