force-app/main/default/objects/RSCInstance__c/fields/RSCOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>RSCOwnerEmail__c</fullName>
    <description>It represents the Default Owner Email of the RSC Instance</description>
    <label>RSC Default Owner Email</label>
    <type>Email</type>
</CustomField>