force-app/main/default/objects/RSCInstance__c/fields/RSCOwnerEmails__c.field-meta.xml
<CustomField>
    <fullName>RSCOwnerEmails__c</fullName>
    <label>RSC Owner Emails</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>