force-app/main/default/objects/RSCInstance__c/fields/RSCRegion__c.field-meta.xml
<CustomField>
    <fullName>RSCRegion__c</fullName>
    <description>It represents the Geographic location of the RSC account</description>
    <label>RSC Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>Out of Region DR-US</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>