force-app/main/default/objects/RSCInstance__c/fields/RSCSuggestedURL__c.field-meta.xml
<CustomField>
    <fullName>RSCSuggestedURL__c</fullName>
    <label>RSC Suggested URL</label>
    <type>Url</type>
</CustomField>