force-app/main/default/objects/RSCInstance__c/fields/RSCUrl__c.field-meta.xml
<CustomField>
    <fullName>RSCUrl__c</fullName>
    <description>It represents the Web Address link of the Customers RSC Account</description>
    <label>RSC URL</label>
    <type>Url</type>
</CustomField>