force-app/main/default/objects/RSCInstance__c/fields/SDPEndUser__c.field-meta.xml
<CustomField>
    <fullName>SDPEndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDP End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSC Instances (SDP End User)</relationshipLabel>
    <relationshipName>SDP_RSCInstances</relationshipName>
    <type>Lookup</type>
</CustomField>