force-app/main/default/objects/RSCInstance__c/fields/SDPEndUserDomain__c.field-meta.xml
<CustomField>
    <fullName>SDPEndUserDomain__c</fullName>
    <description>It represents the End User Domain of the customer</description>
    <label>SDP End User Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>