force-app/main/default/objects/RSCInstance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>It represents the status of the RSC Instance</description>
    <label>RSC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING_CREATION</fullName>
                <label>Pending Creation</label>
            </value>
            <value>
                <fullName>PENDING_MIGRATION</fullName>
                <label>Pending Migration</label>
            </value>
            <value>
                <fullName>PENDING_POST_PROCESSING</fullName>
                <label>Pending Post Processing</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>HOLD</fullName>
                <label>Hold</label>
            </value>
            <value>
                <fullName>GRACE</fullName>
                <label>Grace</label>
            </value>
            <value>
                <fullName>MARKED_FOR_DELETION</fullName>
                <label>Marked For Deletion</label>
            </value>
            <value>
                <fullName>DELETED</fullName>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
                <label>Suspended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>